[gd_scene load_steps=4 format=2]

[ext_resource path="res://GhostPlayer.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 64 )

[node name="GhostPlayer" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Graphics" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Graphics"]
margin_left = 24.0
margin_top = -56.0
margin_right = 32.0
margin_bottom = -32.0
color = Color( 0, 0, 1, 0.392157 )

[node name="ColorRect2" type="ColorRect" parent="Graphics"]
margin_left = -32.0
margin_top = -56.0
margin_right = -24.0
margin_bottom = -32.0
color = Color( 0, 0, 1, 0.392157 )

[node name="ColorRect3" type="ColorRect" parent="Graphics"]
margin_left = 24.0
margin_top = 40.0
margin_right = 32.0
margin_bottom = 64.0
color = Color( 0, 0, 1, 0.392157 )

[node name="ColorRect4" type="ColorRect" parent="Graphics"]
margin_left = -32.0
margin_top = 40.0
margin_right = -24.0
margin_bottom = 64.0
color = Color( 0, 0, 1, 0.392157 )

[node name="ColorRect5" type="ColorRect" parent="Graphics"]
margin_left = -24.0
margin_top = 48.0
margin_right = 24.0
margin_bottom = 56.0
color = Color( 0, 0, 1, 0.392157 )

[node name="ColorRect6" type="ColorRect" parent="Graphics"]
margin_left = -24.0
margin_top = -48.0
margin_right = 24.0
margin_bottom = -40.0
color = Color( 0, 0, 1, 0.392157 )

[node name="Polygon2D" type="Polygon2D" parent="Graphics"]
color = Color( 0, 0, 1, 0.392157 )
polygon = PoolVector2Array( 0, -64, 0, -64, 8, -56, 16, -32, 24, 16, 8, 64, -8, 64, -16, 40, -24, 16, -16, -32, -8, -56 )

[node name="HitWall" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Start" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="HitWall" to="." method="_on_HitWall_timeout"]
[connection signal="timeout" from="Start" to="." method="_on_Start_timeout"]
